# image_proc

./: .gitignore  .gitmodules  CMakeLists.txt  TODO  compiler_system_dependencies.sh  config.cmake.in  install_vscode_extensions.sh
.github/workflows/: cmake_build.yml  codeql.yml  cpp_artifacts.yml
modules/calib/: CMakeLists.txt  main.cpp  main_pixel.cpp  main_point.cpp  vcpkg.json
modules/calib/include/improc/calib/: homography_matrix.hpp  homography_matrix.tpp  line_matrix.hpp  line_matrix.tpp  logger_calib.hpp  pixel_matrix.hpp  pixel_matrix.tpp  point_matrix.hpp  point_matrix.tpp  vector_matrix.hpp
modules/calib/src/: pixel_matrix.tpp  vector_matrix.tpp
modules/calib/test/: CMakeLists.txt  test_homography_matrix.cpp  test_line.cpp  test_logger_calib.cpp  test_pixel.cpp  test_point.cpp
modules/corecv/: CMakeLists.txt  opencv_system_dependencies.sh
modules/corecv/include/improc/: exceptions.hpp  improc_defs.hpp
modules/corecv/include/improc/corecv/: color_space.hpp  image.h  image.hpp  image_debug_singleton.h  image_debug_singleton.hpp  image_format.hpp  interpolation_type.hpp  kernel_shape.hpp  logger_improc.h  logger_improc.hpp  morphological_oper.hpp  threshold_type.hpp
modules/corecv/include/improc/corecv/structures/: color_space.hpp  image_format.hpp  interpolation_type.hpp  kernel_shape.hpp  morphological_oper.hpp  threshold_type.hpp
modules/corecv/include/improc/services/: convert_color_space.hpp  convert_color_space.tpp  resize_image.hpp  resize_image.tpp
modules/corecv/src/: color_space.cpp  convert_color_space.tpp  image.cpp  image_format.cpp  interpolation_type.cpp  kernel_shape.cpp  morphological_oper.cpp  resize_image.tpp  threshold_type.cpp
modules/corecv/test/: CMakeLists.txt  improc_corecv_test_config.hpp.in  resize.json  test_color_space.cpp  test_convert_color_space.cpp  test_image.cpp  test_image_format.cpp  test_interpolation_type.cpp  test_kernel_shape.cpp  test_logger_improc.cpp  test_morphological_oper.cpp  test_threshold_type.cpp
modules/corecv/test/data/: test_color_conversion_with_from_array.json  test_color_conversion_without_from.json  test_color_conversion_without_to.json  test_sequence_color_conversion_with_from.json  test_single_color_conversion_with_from.json
modules/corecv/version/: main.cpp  version_config.hpp.in
modules/improc/: CMakeLists.txt
modules/improc/test/: convert_color_space.json  image_encoder.json  morphological_operation.json  threshold.json
modules/infrastructure/: CMakeLists.txt
modules/infrastructure/include/improc/: exception.h  improc_defs.h
modules/infrastructure/include/improc/infrastructure/: benchmark.h  benchmark_singleton.h  file.h  jsonfile_parser.h  logger_infrastructure.h  logger_singleton.h
modules/infrastructure/src/: benchmark.cpp  benchmark_singleton.cpp  benchmark_singleton.tpp  file.cpp  logger_singleton.cpp  logger_singleton.tpp
modules/infrastructure/test/: CMakeLists.txt  main.cpp  test_benchmark.cpp  test_file.cpp  test_logger.cpp
modules/infrastructure/version/: main.cpp  version_config.h.in
modules/services/: CMakeLists.txt  main.cpp  main3.cpp  main_ex1.cpp  main_ex2.cpp
modules/services/include/improc/services/: base_service.h  batch_service.h  container.h  context.h  exception.h  factory.h  logger_services.h  sequence_service.h
modules/services/src/: base_service.cpp  base_service.tpp  batch_service.cpp  batch_service.tpp  container.cpp  container.tpp  context.cpp  context.tpp  factory.cpp  factory.tpp
modules/services/test/: CMakeLists.txt  main_container.cpp  main_ex1.cpp  main_ex2.cpp  test_container.cpp  test_duplicated_service.cpp  test_several_outputs.cpp
modules/services/version/: main.cpp  version_config.h.in
